--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -3,7 +3,6 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
   height: 100vh;
   position: relative;
   top: 0;
@@ -11,7 +10,6 @@
   right: 0;
   bottom: 0;
   min-height: 785px;
-  background-attachment: fixed;
 
   &::before {
     content: '';
@@ -88,6 +86,10 @@
     height: calc(100vh + $top);
     top: $top;
     min-height: initial;
+    background-size: auto 100%;
+    background-position: 65% center;
+    width: 100%;
+    overflow: hidden;
 
     .vertical-divider { display: none; }
 
