--- a/scss/sections/_products.scss
+++ b/scss/sections/_products.scss
@@ -1,3 +1,5 @@
+$custom-grid: 1291px;
+
 .products-section {
   background-color: var(--color-white);
   
@@ -122,10 +124,11 @@
 
         .content {
           .title {
-            font-size: 2rem;
             height: auto;
             margin: 17px auto;
+            white-space: normal;
             width: 100%;
+            word-break: break-word;
           }
 
           .description {
@@ -138,7 +141,8 @@
 
             div {
               flex: 1;
-              margin-top: 16px;
+              margin-top: 32px;
+
               .btn-outline {
                 margin: 0;
                 top: 0;
@@ -300,12 +304,13 @@
         flex-direction: row;
         gap: 31px;
         margin-left: 52px;
-        overflow-x: hidden;
+        overflow-x: scroll;
         position: relative;
         padding-top: 60px;
 
         .product-card {
           height: 344px;
+          min-width: 288px;
           position: relative;
           width: 288px;
 
@@ -337,7 +342,7 @@
         }
       }
 
-      @include responsive(custom, null, 1291px) {
+      @include responsive(custom, null, $custom-grid) {
         .product-card {
           flex: 100%;
 
@@ -369,17 +374,11 @@
         }
 
         .product-grid {
-          gap: 0;
-          flex-direction: column;
-          margin-left: 0;
-          padding-top: 0;
+          flex-direction: row;
+          margin: auto 10px;
         }
       }
     }
   }
-
   
 }
-
-
-
